--- a/index.html
+++ b/index.html
@@ -30,11 +30,14 @@
 
     <div id='footer'>
         <div id='links'>
-            <span id="facebook" style="width: 40px;">
+            <span id="facebook" style="width: 40px;" class="sm-links">
                 <a href=https://www.facebook.com/skyskraperband/ class="fab fa-facebook-square" title="Facebook"></a>
             </span>
-            <span id="instagram" style="width: 40px;">
+            <span id="instagram" style="width: 40px;" class="sm-links">
                 <a href="https://www.instagram.com/skyskraperband/" class="fab fa-instagram-square" title="Instagram"></a>
+            </span>
+            <span id="spotify" class="sm-links">
+                <a href="https://open.spotify.com/artist/3SYUE0c4ieKIJMApQYhzwC?si=S_5PvRXCQEuNaIj8k1FTCQ" class="fab fa-spotify"></a>
             </span>
             
             
