--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div id="app"> {{ timer }} </div>
 
     <div id="logo">
-        <img src="images/Skyskraper_logo.jpg" alt="skyskraper logo" srcset="" style="width: 240px; height: 60px">
+        <img src="images/Skyskraper_logo.jpg" alt="skyskraper logo" srcset="" style="width: 24vw; height: 7vw">
     </div>
 
     <div id='footer'>
