--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="description" content= "The official Skyskraper website. " />
     <meta name="robots" content= "index, follow">   
 
-    <script src="vue.js"></script>
+    <script src="vue.min.js"></script>
     <script src="script.js"></script>
 
 
